👌 IMPROVE: Upgraded JHipster to 8.1.0